# elastic-otel-php

./: .gitignore  .gitmodules  .snyk  CHANGELOG.md  DEVELOPMENT.md  NOTICE  README.md  catalog-info.yaml  composer.json  composer_lock_81  composer_lock_81_dev  composer_lock_81_prod  composer_lock_82  composer_lock_82_dev  composer_lock_83  composer_lock_83_dev  composer_lock_84  composer_lock_84_prod  composer_prod.json  elastic-otel-php.properties  phpcs.xml  phpcs.xml.dist  phpstan.dist.neon  phpunit.xml  phpunit_component_tests.xml
elastic/native/libelastic/: CMakeLists.txt  ElasticConfigProvider.cpp  ElasticConfigProvider.h  ElasticVendor.cpp  ElasticVendor.h  elastic_vendor_inject.cmake  elastic_version.h.in
prod/native/: .clang-format  CMakeLists.txt  CMakePresets.json  conanfile.py  conanfile.txt
prod/native/building/: install_dependencies.sh  install_venv_conan.sh
prod/native/building/cmake/: elastic_get_git_version.cmake  elastic_read_properties.cmake  elastic_set_default_build_options.cmake
prod/native/building/conan/: conan_profile.in  settings.yml
prod/native/building/conan/profiles/: linux-arm64-release  linux-x86-64-release  linuxmusl-arm64-release  linuxmusl-x86-64-release
prod/native/building/dependencies/b2/: conanfile.py
prod/native/building/dependencies/php-headers/: conandata.yml  conanfile.py
prod/native/building/dependencies/php80/: conanfile.py
prod/native/building/dependencies/protobuf-custom/: conanfile.py
prod/native/building/dockerized/: docker-compose.yml
prod/native/building/dockerized/images/: Dockerfile_arm64  Dockerfile_arm64_musl  Dockerfile_glibc  Dockerfile_musl
prod/native/ext/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  ConfigSnapshot.h  Hooking.cpp  Hooking.h  InternalFunctionInstrumentation.cpp  InternalFunctionInstrumentation.h  ModuleEntry.cpp  ModuleFunctions.cpp  ModuleFunctionsImpl.cpp  ModuleFunctionsImpl.h  ModuleGlobals.h  ModuleInfo.h  ModuleIniEntries.cpp  ModuleIniEntries.h  ModuleInit.cpp  SigSegvHandler.cpp  SigSegvHandler.h  config.m4  config.w32  constants.h  elastic_apm.cpp  elastic_apm_API.cpp  lifecycle.cpp  log.h  numbered_intercepting_callbacks.h  platform_threads_linux.cpp  tracer_PHP_part.cpp  tracer_PHP_part.h
prod/native/ext/unit_tests/: gen_numbered_intercepting_callbacks_src.h  main.cpp
prod/native/extension/code/: CMakeLists.txt  ForkHandler.cpp  ForkHandler.h  Hooking.cpp  Hooking.h  InternalFunctionInstrumentation.cpp  InternalFunctionInstrumentation.h  ModuleEntry.cpp  ModuleFunctions.cpp  ModuleFunctions.h  ModuleFunctionsImpl.cpp  ModuleFunctionsImpl.h  ModuleGlobals.h  ModuleInfo.cpp  ModuleInfo.h  ModuleIniEntries.cpp  ModuleIniEntries.h  ModuleInit.cpp  ModuleInit.h  OtlpExporter.cpp  OtlpExporter.h  PhpErrorData.cpp  PhpErrorData.h  SigSegvHandler.cpp  SigSegvHandler.h  SpanConverter.h  php_error.cpp  php_error.h  tracer_PHP_part.cpp  tracer_PHP_part.h  util_for_PHP.cpp  util_for_PHP.h
prod/native/extension/code/OtlpExporter/: AttributesConverter.h  LogsConverter.h  MetricConverter.h  SpanConverter.h
prod/native/extension/phpt/: .gitignore  run.sh
prod/native/extension/phpt/tests/: config_boolean_0_using_env_var_is_false.phpt  config_boolean_0_using_ini_is_false.phpt  config_boolean_1_using_env_var_is_true.phpt  config_boolean_1_using_ini_is_true.phpt  config_boolean_FaLSe_using_env_var_is_false.phpt  config_boolean_FaLSe_using_ini_is_false.phpt  config_boolean_No_using_env_var_is_false.phpt  config_boolean_No_using_ini_is_false.phpt  config_boolean_OFF_using_env_var_is_false.phpt  config_boolean_OFF_using_ini_is_false.phpt  config_boolean_TRue_using_env_var_is_true.phpt  config_boolean_TRue_using_ini_is_true.phpt  config_boolean_oN_using_env_var_is_true.phpt  config_boolean_oN_using_ini_is_true.phpt  config_boolean_yEs_using_env_var_is_true.phpt  config_boolean_yEs_using_ini_is_true.phpt  config_defaults.phpt  config_dynamic_options.phpt  config_enabled_ini_setting_cannot_be_changed_after_start.phpt  config_ini_has_higher_precedence_than_env_vars.phpt  config_invalid_ini_fallback_default_not_env_var.phpt  config_invalid_ini_value_always_false_not_env_var.phpt  config_setting_opentelemetry_option_env.phpt  config_setting_opentelemetry_option_ini.phpt  config_setting_to_invalid_values_using_env_vars.phpt  (+31 more)
prod/native/libcommon/code/: AgentGlobals.cpp  AgentGlobals.h  CMakeLists.txt  CallOnScopeExit.h  CiCharTraits.h  CommonUtils.cpp  CommonUtils.h  ConfigurationManager.cpp  ConfigurationManager.h  ConfigurationSnapshot.h  ConfigurationStorage.h  DependencyAutoLoaderGuard.cpp  DependencyAutoLoaderGuard.h  Diagnostics.cpp  Diagnostics.h  ElasticDynamicConfigurationAdapter.cpp  ElasticDynamicConfigurationAdapter.h  ForkableInterface.h  InferredSpans.h  InstrumentedFunctionHooksStorage.h  InternalChecksLevel.h  InternalFunctionInstrumentationStorage.h  LogFeature.cpp  LogFeature.h.in  LogLevel.cpp  LogLevel.h  Logger.cpp  Logger.h  LoggerInterface.h  LoggerSinkInterface.h  PeriodicTaskExecutor.h  PhpBridgeInterface.h  PhpSapi.h  RequestScope.h  ResourceDetector.cpp  ResourceDetector.h  SharedMemoryState.h  SpinLock.h  basic_macros.h  elastic_apm_version.h  (+2 more)
prod/native/libcommon/test/: CMakeLists.txt  CallOnScopeExitTest.cpp  CommonUtilsTest.cpp  ConfigurationManagerTest.cpp  DependencyAutoLoaderGuardTest.cpp  LoggerTest.cpp  OsUtils.cpp  PeriodicTaskExecutorTest.cpp  PhpBridgeMock.h  PhpSapiTest.cpp  SharedMemoryStateTest.cpp
prod/native/libopamp/: CMakeLists.txt
prod/native/libotlp/: CMakeLists.txt
prod/native/libphpbridge/code/: AutoZendString.h  AutoZval.h  CMakeLists.txt  Debugging.cpp  Exceptions.cpp  Exceptions.h  Helpers.cpp  Helpers.h  Misc.cpp  OpCache.cpp  PhpBridge.cpp  PhpBridge.h
prod/native/libsemconv/: CMakeLists.txt
prod/native/loader/code/: CMakeLists.txt  loader.cpp  phpdetection.cpp  phpdetection.h
prod/native/phpbridge_extension/code/: AutoZvalFunctions.cpp  AutoZvalFunctions.h  BridgeModuleEntry.cpp  BridgeModuleFunctions.cpp  BridgeModuleFunctions.h  BridgeModuleGlobals.h  CMakeLists.txt
prod/native/phpbridge_extension/phpt/: run.sh
(+1010 files in other folders)
